Aplique css  y añadi el carrito

--- a/Templates/products/listar_productos.html
+++ b/Templates/products/listar_productos.html
@@ -5,23 +5,39 @@ Lista de Productos
 {% endblock %}
 
 {% block content %}
-<h2>Productos</h2>
-<a href="{% url 'agregar_producto' %}">Agregar Nuevo Producto</a>
-<ul>
-    {% for producto in productos %}
-        <li>
-            <h3>{{ producto.nombre }}</h3>
-            <p>{{ producto.descripcion }}</p>
-            <p>Precio: ${{ producto.precio }}</p>
-            {% if producto.imagen %}
-                <img src="{{ producto.imagen.url }}" alt="{{ producto.nombre }}" style="max-width: 100px;">
-            {% endif %}
-            <form action="{% url 'agregar_al_carrito' producto.id %}" method="POST" style="display: inline;">
-                {% csrf_token %}
-                <button type="submit">Agregar al Carrito</button>
-            </form>
-            <a href="{% url 'editar_producto' producto.id %}">Editar</a>
-        </li>
-    {% endfor %}
-</ul>
+<div class="productos">
+    <div class="titulo">
+        <h2>Nuestros productos</h2>
+        {% if request.user.is_superuser %}
+        <button type="button" class="btn btn-outline-secondary"><a href="{% url 'agregar_producto' %}">Agregar Nuevo Producto</a></button>        
+        {% endif %}
+    </div>
+
+    <ul class="lista">
+        {% for producto in productos %}
+            <li class="tarjeta">
+                <div>
+                    <h3>{{ producto.nombre }}</h3>
+                    <p>Precio: ${{ producto.precio }}</p>   
+                </div>
+                <div class="info">
+   
+                    {% if producto.imagen %}
+                        <img src="{{ producto.imagen.url }}" alt="{{ producto.nombre }}" style="max-width: 100px;">
+                    {% endif %}
+                </div>
+                <div class="botones">
+                    {% if request.user.is_superuser %}
+                    <button type="button" class="btn btn-outline-info"><a href="{% url 'editar_producto' producto.id %}">Editar</a></button>
+                    <button type="button" class="btn btn-outline-info"><a href="{% url 'eliminar_producto' producto.id %}">Eliminar</a></button>
+                    {% endif %}
+                    <button type="button" class="btn btn-outline-primary"><a href="{% url 'detalle_producto' producto.id %}">Ver Detalles</a></button>
+                    <button type="button" class="btn btn-primary"><a href="{% url 'agregar_al_carrito' producto.id %}">Agregar al Carrito</a></button>             
+                </div>
+
+            </li>
+        {% endfor %}
+    </ul>
+</div>
+
 {% endblock %}
