--- a/Templates/products/agregar_producto.html
+++ b/Templates/products/agregar_producto.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
-
-{% block titulo %}
-Agregar Producto
-{% endblock %}
-
+{% load static %}
+<link rel="stylesheet" href="{% static 'Style/style.css' %}">
 {% block content %}
-<h2>Agregar Producto</h2>
-<form method="POST" enctype="multipart/form-data">  <!-- Asegúrate de incluir enctype para subir imágenes -->
-    {% csrf_token %}
-    {{ form.as_p }}  <!-- Renderiza el formulario -->
-    <button type="submit">Guardar Producto</button>
-</form>
+<div class="nuevo">
+    <h2>Agregar Producto</h2>
+    <form method="POST" enctype="multipart/form-data"> 
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Guardar Producto</button>
+    </form>
+</div>
+
 {% endblock %}
