--- a/Templates/account/iniciar_sesion.html
+++ b/Templates/account/iniciar_sesion.html
@@ -5,25 +5,28 @@ Iniciar Sesión
 {% endblock %}
 
 {% block content %}
-<h2>Iniciar Sesión</h2>
-<form method="POST">
-    {% csrf_token %}
-    <div>
-        <label for="username">Nombre de Usuario:</label>
-        <input type="text" name="username" required>
-    </div>
-    <div>
-        <label for="password">Contraseña:</label>
-        <input type="password" name="password" required>
-    </div>
-    <button type="submit">Iniciar Sesión</button>
-</form>
+<div class="login">
+    <h2>Iniciar Sesión</h2>
+    <form method="POST">
+        {% csrf_token %}
+        <div>
+            <label for="username">Nombre de Usuario:</label>
+            <input type="text" name="username" required>
+        </div>
+        <div>
+            <label for="password">Contraseña:</label>
+            <input type="password" name="password" required>
+        </div>
+        <button type="submit" class="btn btn-success">Iniciar Sesión</button>
+    </form>
+    
+    {% if next %}
+        <input type="hidden" name="next" value="{{ next }}">
+    {% endif %}
+    
+    {% if error_message %}
+        <p style="color: red;">{{ error_message }}</p>
+    {% endif %}
+</div>
 
-{% if next %}
-    <input type="hidden" name="next" value="{{ next }}">
-{% endif %}
-
-{% if error_message %}
-    <p style="color: red;">{{ error_message }}</p>
-{% endif %}
 {% endblock %}
