--- a/Templates/account/perfil.html
+++ b/Templates/account/perfil.html
@@ -5,16 +5,17 @@ Perfil de {{ usuario.username }}
 {% endblock %}
 
 {% block content %}
-<h2>Perfil de {{ usuario.username }}</h2>
-
-<p>Nombre de Usuario: {{ usuario.username }}</p>
-<p>Correo Electrónico: {{ usuario.email }}</p>
-
-{% if usuario.avatar %}
+<div class="perfil">
+    {% if usuario.avatar %}
     <img src="{{ usuario.avatar.url }}" alt="Avatar de {{ usuario.username }}" width="150" height="150">
-{% else %}
-    <p>No has subido un avatar aún.</p>
-{% endif %}
+    {% else %}
+        <p>No has subido un avatar aún.</p>
+    {% endif %}
+    <div class="head">
+        <h2>{{ usuario.username }}</h2>
+        <p>Correo Electrónico: {{ usuario.email }}</p>
+        <a href="{% url 'editar_perfil' %}" class="btn btn-outline-primary">Editar Perfil</a>
+    </div>
+</div>
 
-<a href="{% url 'editar_perfil' %}">Editar Perfil</a>
 {% endblock %}
