--- a/Templates/account/registro.html
+++ b/Templates/account/registro.html
@@ -5,10 +5,13 @@ Registro de Usuario
 {% endblock %}
 
 {% block content %}
-<h2>Registrar</h2>
-<form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Registrar</button>
-</form>
+<div class="registro">
+    <h2>Registro</h2>
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-success">Registro</button>
+    </form>    
+</div>
+
 {% endblock %}
