--- a/Templates/products/agregar_producto.html
+++ b/Templates/products/agregar_producto.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
-{% load static %}
-<link rel="stylesheet" href="{% static 'Style/style.css' %}">
+{% block titulo %}
+Agregar Producto
+{% endblock %}
 {% block content %}
 <div class="nuevo">
     <h2>Agregar Producto</h2>
     <form method="POST" enctype="multipart/form-data"> 
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Guardar Producto</button>
+        <button type="submit" class="btn btn-success">Guardar Producto</button>
     </form>
 </div>
 
