--- a/Templates/products/listar_productos.html
+++ b/Templates/products/listar_productos.html
@@ -28,8 +28,8 @@ Lista de Productos
                 </div>
                 <div class="botones">
                     {% if request.user.is_superuser %}
+                    <button type="button" class="btn btn-outline-danger"><a href="{% url 'eliminar_producto' producto.id %}">Eliminar</a></button>
                     <button type="button" class="btn btn-outline-info"><a href="{% url 'editar_producto' producto.id %}">Editar</a></button>
-                    <button type="button" class="btn btn-outline-info"><a href="{% url 'eliminar_producto' producto.id %}">Eliminar</a></button>
                     {% endif %}
                     <button type="button" class="btn btn-outline-primary"><a href="{% url 'detalle_producto' producto.id %}">Ver Detalles</a></button>
                     <button type="button" class="btn btn-primary"><a href="{% url 'agregar_al_carrito' producto.id %}">Agregar al Carrito</a></button>             
