--- a/Templates/products/ver_carrito.html
+++ b/Templates/products/ver_carrito.html
@@ -1,24 +1,29 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Carrito de Compras</h1>
+<div class="carrito">
+    <h1>Tu carrito</h1>
 
-{% if carrito.carritoproducto_set.count == 0 %}
-    <p>Tu carrito está vacío.</p>
-{% else %}
-    <ul>
-        {% for item in carrito.carritoproducto_set.all %}
-        <li>
-            <strong>Producto:</strong> {{ item.producto.nombre }}<br>
-            <strong>Cantidad:</strong> {{ item.cantidad }}<br>
-            <strong>Precio por unidad:</strong> ${{ item.producto.precio }}<br>
-            <form action="{% url 'eliminar_del_carrito' item.producto.id %}" method="POST" style="display:inline;">
-                {% csrf_token %}
-                <button type="submit">Eliminar producto</button>
-            </form>
-        </li>
-        {% endfor %}
-    </ul>
-    <h2>Total Carrito: ${{ total_price }}</h2>
-{% endif %}
+    {% if carrito.carritoproducto_set.count == 0 %}
+        <p>Tu carrito está vacío.</p>
+    {% else %}
+        <ul>
+            {% for item in carrito.carritoproducto_set.all %}
+            <li class="item">
+                <div class="info">
+                    <p><strong>Producto:</strong> {{ item.producto.nombre }}</p>
+                    <p><strong>Cantidad:</strong> {{ item.cantidad }}</p>
+                    <p><strong>Precio por unidad:</strong> ${{ item.producto.precio }}</p>
+                </div>
+                <form action="{% url 'eliminar_del_carrito' item.producto.id %}" method="POST" style="display:inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-outline-danger">Eliminar producto</button>
+                </form>
+            </li>
+            {% endfor %}
+        </ul>
+        <h2>Total Carrito: ${{ total_price }}</h2>
+    {% endif %}
+</div>
+
 {% endblock %}
